<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wanderlab.wanderlustcompanion.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_details_dashboard"
        android:name="com.wanderlab.wanderlustcompanion.ui.dashboard.DashboardFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_maps_search"
        android:name="com.wanderlab.wanderlustcompanion.MapsFragment"
        android:label="@string/title_search_maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/navigation_recommendation"
        android:name="com.wanderlab.wanderlustcompanion.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_recommendation" />
</navigation>