<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgdegradepurple"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/firstNameTextHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/lastNameTextHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invalid_username"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/addressViewHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_text"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cityViewHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_text"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>