<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen"
    tools:visibility="visible">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_collection"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoimageView"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:src="@mipmap/ic_launcher_wanderlust_foreground"
            android:visibility="visible"
            app:srcCompat="@mipmap/ic_launcher_wanderlust_foreground"
            tools:srcCompat="@mipmap/ic_launcher_wanderlust_foreground"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/mainTitileTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/version_number"
            android:textAlignment="center"
            android:textColor="@color/version_color"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/welcomecard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="false"
            android:clipChildren="false"
            android:clipToPadding="true"
            app:cardCornerRadius="64dp"
            app:contentPaddingBottom="16dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/welcome_header"
                    android:textAlignment="center"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/welcomeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/welcome_description"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/get_started_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="go_to_login"
                    android:text="@string/button_text_getstarted" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>