<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgdegradepurple"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            android:src="@mipmap/ic_launcher_wanderlust_foreground"
            tools:src="@mipmap/ic_launcher_wanderlust_foreground" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_drawable"
            android:elegantTextHeight="true"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@id/username"
            android:maxHeight="488dp"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/usernamename_edittext" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_drawable"
            android:elegantTextHeight="true"
            android:ems="10"
            android:inputType="textPassword"
            android:maxHeight="488dp"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            tools:text="@string/password_edittext"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/forgotpassword"
            android:textColor="#000000" />

        <Button
            android:id="@+id/bt_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            tools:background="@color/teal_200"
            android:text="@string/signin_text"
            android:textColor="#5E35B1" />

        <Button
            android:id="@+id/bt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:background="@color/design_default_color_primary_variant"
            android:elegantTextHeight="true"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/sign_up_text" />

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>