<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgdegradepurple"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_wanderlust_foreground"
            tools:srcCompat="@mipmap/ic_launcher_wanderlust_foreground" />

        <LinearLayout
            android:id="@+id/FirstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/FirstNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_name"
                android:textColor="#263238" />

            <EditText
                android:id="@+id/FirstNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_drawable"
                android:elegantTextHeight="true"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@id/FirstNameEditText"
                android:maxWidth="488dp"
                android:minHeight="48dp"
                android:text="@string/name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LastNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_name"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/LastNAmeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/edit_text_drawable"
                android:elegantTextHeight="true"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@id/LastNAmeEditText"
                android:maxWidth="488dp"
                android:minHeight="48dp"
                android:text="@string/last_name" />

        </LinearLayout>

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_drawable"
            android:elegantTextHeight="true"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@id/addressEditText"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/address_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_text"
            android:textColor="#263238"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_drawable"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@id/cityEditText"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/city_text" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneTextView"
            android:textColor="#212121"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_drawable"
            android:elegantTextHeight="true"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@id/phoneEditText"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/phoneTextView"
            android:textColor="#FAFAFA" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textColor="#212121"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_drawable"
            android:elegantTextHeight="true"
            android:ems="10"
            android:inputType="text|textEmailAddress"
            android:labelFor="@id/emailEditText"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/email_text"
            android:textColor="#ECEFF1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            tools:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/bt_profile_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:elegantTextHeight="true"
            android:text="@string/sign_up_text"
            android:textColor="#5E35B1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>